# Confer-ncia_Quantitativa

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  relatorio.docx  requirements.txt
reports/: Conferência Quantitativa.docx
src/: main.py  report.py  scanner.py  utils.py
src/core/: models.py  parsing.py  reconcile.py  report.py  scanner.py
src/infra/: app.py  cli.py
